--- a/.gitignore
+++ b/.gitignore
@@ -1,68 +1,63 @@
 # --- Node ---
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-
-# --- Build ---
-dist/
-.next/
-out/
-build/
-coverage/
-
-# --- TypeScript ---
-*.tsbuildinfo
+**/node_modules/
+**/npm-debug.log*
+**/yarn-debug.log*
+**/yarn-error.log*
+**/pnpm-debug.log*
 
 # --- Logs ---
-*.log
-logs/
-*.pid
-*.seed
-*.pid.lock
+**/*.log
+**/logs/
+**/*.pid
+**/*.seed
+**/*.pid.lock
+
+# --- Build ---
+**/dist/
+**/.next/
+**/out/
+**/build/
+**/coverage/
+
+# --- TypeScript ---
+**/*.tsbuildinfo
 
 # --- Environment variables ---
-.env
-.env.*.local
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+**/.env
+**/.env.*.local
+**/.env.local
+**/.env.development.local
+**/.env.test.local
+**/.env.production.local
 
 # --- Editor / OS ---
-.DS_Store
-Thumbs.db
-.idea/
-.vscode/
-*.swp
+**/.DS_Store
+**/Thumbs.db
+**/.idea/
+**/.vscode/
+**/*.swp
 
 # --- Monorepo tooling ---
-.pnpm-store/
-.turbo/
-turbo.log
-.cache/
-turbo/
-*.tsbuildinfo
+**/.pnpm-store/
+**/.turbo/
+**/turbo.log
+**/.cache/
+**/turbo/
+**/*.tsbuildinfo
 
 # --- Optional: lockfiles from other package managers you’re not using ---
 # (uncomment if you're only using one)
-# yarn.lock
-# package-lock.json
-# pnpm-lock.yaml
+# **/yarn.lock
+# **/package-lock.json
+# **/pnpm-lock.yaml
 
 # --- Optional: misc ---
-*.tgz
-*.bak
-*.orig
-*.rej
-*.swo
-*.swn
+**/*.tgz
+**/*.bak
+**/*.orig
+**/*.rej
+**/*.swo
+**/*.swn
 
 # --- VS Code test logs ---
-.vscode-test/
-
-# --- Next.js build artifacts ---
-apps/*/.next/
-apps/*/out/
-apps/*/build/
+**/.vscode-test/
