--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,7 +13,9 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
+    "@mui/x-date-pickers": "^8.8.0",
     "@tanstack/react-query": "^5.82.0",
+    "dayjs": "^1.11.13",
     "next": "15.3.5",
     "pg": "^8.16.3",
     "react": "^19.0.0",
