--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,7 +19,8 @@
     "next": "15.3.5",
     "pg": "^8.16.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "recharts": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
