--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query": "^5.82.0",
     "dayjs": "^1.11.13",
     "next": "15.3.5",
+    "next-auth": "^4.24.11",
     "pg": "^8.16.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
