--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "turbo": "^1.10.0"
   },
   "dependencies": {
-    "@calorie-counter/sequelize": "^1.0.0",
-    "pg": "^8.16.3"
+    "@calorie-counter/sequelize": "^1.0.0"
   }
 }
