--- a/package.json
+++ b/package.json
@@ -12,13 +12,12 @@
     "test": "turbo run test"
   },
   "workspaces": [
-    "apps/*",
-    "packages/*"
+    "apps/*"
   ],
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.36.0",
+    "@typescript-eslint/parser": "^8.36.0",
+    "eslint": "^9.31.0",
     "turbo": "^1.10.0"
-  },
-  "dependencies": {
-    "@calorie-counter/sequelize": "^1.0.0"
   }
 }
