--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/react": "^1.2.12",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.2.0",
@@ -17,12 +18,15 @@
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.50.5",
     "@tanstack/react-query": "^5.82.0",
+    "ai": "^4.3.19",
     "bcrypt": "^6.0.0",
     "dayjs": "^1.11.13",
+    "install": "^0.13.0",
     "next": "15.3.5",
+    "npm": "^10.9.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "zod": "^4.0.5"
+    "zod": "^3.25.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
