--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -25,6 +25,7 @@
     "install": "^0.13.0",
     "next": "15.3.5",
     "npm": "^10.9.3",
+    "outdent": "^0.8.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "zod": "^3.25.0"
